# temail

./: .clangd  .gitignore  Doxyfile  README.md  default.nix  flake.nix  meson.build  meson_options.txt
docs/: IMAP异步安全性.md
include/: meson.build
include/temail/: common.hpp  tag.hpp
include/temail/client/: base.hpp  imap.hpp  request.hpp  response.hpp
include/temail/clients/: imap.hpp  response.hpp
include/temail/private/client/imap/: fetch.hpp  list.hpp  login.hpp  logout.hpp  noop.hpp  response.hpp  search.hpp  select.hpp
src/: meson.build  tag.cpp
src/client/: base.cpp  imap.cpp  meson.build
src/client/imap/: fetch.cpp  list.cpp  login.cpp  logout.cpp  meson.build  noop.cpp  response.cpp  search.cpp  select.cpp
src/clients/: imap.cpp  meson.build
test/: meson.build
test/client/: meson.build  test_imap.cpp  test_imap.hpp
